--- a/angular/package.json
+++ b/angular/package.json
@@ -26,6 +26,8 @@
     "abp-ng2-module": "^6.2.0",
     "abp-web-resources": "^5.3.0",
     "admin-lte-css-only": "^3.1.0",
+    "ag-grid-angular": "^28.2.1",
+    "ag-grid-community": "^28.2.1",
     "core-js": "^3.2.1",
     "famfamfam-flags": "^1.0.0",
     "lodash-es": "^4.17.15",
