--- a/angular/package.json
+++ b/angular/package.json
@@ -33,6 +33,7 @@
     "lodash-es": "^4.17.15",
     "moment": "2.24.0",
     "moment-timezone": "0.5.33",
+    "ng-click-outside": "^9.0.1",
     "ngx-bootstrap": "^5.6.1",
     "ngx-pagination": "^5.0.0",
     "push.js": "1.0.12",
