--- a/angular/package.json
+++ b/angular/package.json
@@ -35,6 +35,7 @@
     "moment-timezone": "0.5.33",
     "ng-click-outside": "^9.0.1",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-image-cropper": "^6.3.1",
     "ngx-pagination": "^5.0.0",
     "push.js": "1.0.12",
     "rxjs": "^6.4.0",
